--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "loader-utils": "^1.0.3",
     "markdown-it": "^8.3.1",
     "vue-server-renderer": "^2.2.4"
+  },
+  "devDependencies": {
+    "eslint": "^3.18.0",
+    "eslint-config-vision": "^1.1.0"
   }
 }
