--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,8 @@
 {
-    "extends": "vusion",
+    "extends": "vusion/all",
     "env": {
         "commonjs": true,
         "node": true,
-        "browser": true,
-    },
+        "browser": true
+    }
 }
