--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "loader"
   ],
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
     "globby": "^6.1.0",
     "highlight.js": "^9.10.0",
     "loader-utils": "^1.1.0",
     "markdown-it": "^8.3.1",
-    "u-emitter.vue": "^0.1.1",
-    "u-list-view-item.vue": "^0.2.6",
-    "u-list-view.vue": "^0.2.6",
-    "u-router-item.vue": "^0.1.0",
+    "proto-ui.vusion": "^0.3.27",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.2.4",
     "vusion-utils": "^0.2.0"
