--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "loader-utils": "^1.1.0",
     "markdown-it": "^8.3.1",
     "proto-ui.vusion": "^0.3.27",
+    "safer-eval": "^1.2.3",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.2.4",
     "vusion-utils": "^0.2.2"
