--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vusion/doc-loader",
   "description": "Webpack loader to generate Vusion component docs.",
-  "version": "0.10.5",
+  "version": "0.11.0",
   "author": "Rainfore <rainforest92@126.com>",
   "main": "./index.js",
   "repository": "vusion/doc-loader",
@@ -22,8 +22,8 @@
     "loader"
   ],
   "dependencies": {
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.5.5",
     "globby": "^6.1.0",
     "proto-ui.vusion": "^0.4.0",
     "safer-eval": "^1.2.3",
