--- a/package.json
+++ b/package.json
@@ -32,7 +32,14 @@
     "vusion-utils": "^0.4.0"
   },
   "devDependencies": {
+    "husky": "^3.0.4",
+    "vusion-hooks": "^0.3.0",
     "eslint": "^5.14.1",
-    "eslint-config-vusion": "^3.0.1"
+    "eslint-config-vusion": "^3.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "node node_modules/vusion-hooks/pre-commit"
+    }
   }
 }
