--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vusion/doc-loader",
   "description": "Webpack loader to generate Vusion component docs.",
-  "version": "0.11.4-alpha",
+  "version": "0.11.5",
   "author": "Rainfore <rainforest92@126.com>",
   "main": "./index.js",
   "repository": "vusion/doc-loader",
@@ -25,7 +25,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.5.5",
     "globby": "^6.1.0",
-    "proto-ui.vusion": "^0.4.16",
+    "proto-ui.vusion": "^0.4.17",
     "safer-eval": "^1.2.3",
     "vue-router": "^3.0.1",
     "vusion-api": "^0.2.4",
