:fire: Remove proto-ui

--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.5.5",
     "globby": "^6.1.0",
-    "proto-ui.vusion": "^0.6.6",
+    "cloud-ui.vusion": "^0.6.5",
     "safer-eval": "^1.2.3",
     "vue-router": "^3.0.1",
-    "vusion-api": "^0.5.18",
+    "vusion-api": "^0.5.19",
     "vusion-utils": "^0.4.7"
   },
   "devDependencies": {
